<resources>
    <string name="app_name">MyFirstApp</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="create_account">Create Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="ready_to_watch">Ready to watch?</string>
    <string name="as_a_member_you_can_watch_exclusive_tv_shows_and_movies_on_the_mobile_app_and_all_your_other_devices">As a member, you can watch exclusive TV shows and movies on the mobile app and all your other devices.</string>
    <string name="new_to_kingflix_sign_up_now">New to Kingflix? Sign up now</string>

</resources>